[package]
authors = ["Jacob Finkelman <Eh2406@wayne.edu>"]
description = "This provides several fast numerical integration methods. This library is pure safe rust, and cross-platform. The double exponential algorithm is naturally adaptive, and does not allocate."
documentation = "https://docs.rs/quadrature/"
keywords = ["math", "mathematics", "numerics"]
name = "quadrature"
readme = "README.md"
repository = "https://github.com/Eh2406/quadrature"
version = "0.1.2"
license = "MIT/Apache-2.0"

[badges]
appveyor = { repository = "Eh2406/quadrature" }
travis-ci = { repository = "Eh2406/quadrature", branch = "master" }

[dependencies]
num-traits = "0.2"

[profile]

[profile.bench]
debug = true
