[package]
authors = ["Jacob Finkelman <Eh2406@wayne.edu>"]
description = "This provides several fast numerical integration methods. This library is pure safe rust, and cross-platform. The double exponential algorithm is naturally adaptive, and does not allocate."
documentation = "https://docs.rs/quadrature/"
keywords = ["math", "mathematics", "numerics"]
categories = ["science", "no-std"]
name = "quadrature"
readme = "README.md"
repository = "https://github.com/Eh2406/quadrature"
version = "0.2.0"
license = "MIT/Apache-2.0"

[badges]
appveyor = { repository = "Eh2406/quadrature" }
travis-ci = { repository = "Eh2406/quadrature", branch = "master" }

[dependencies]
num-traits = { version = "0.2", default-features = false }

[profile]

[profile.bench]
debug = true

[features]
default = ["std"]
std = [ "num-traits/std" ]
